--- a/styles/style.css
+++ b/styles/style.css
@@ -4,10 +4,13 @@
 /* Common styles or utilities */
 body{
     font-family: 'Poppins', sans-serif;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
 }
 
 /* banner styles */
+
 .banner-container{
     display: flex;
     align-items: center;
@@ -47,12 +50,17 @@ body{
 }
 
 /* button section styles */
+
 .container{
     display: flex;
     justify-content: center;
     margin: 50px 120px;
 }
 .btn-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: #161616;
     width: 250px;
     height: 250px;
@@ -69,7 +77,9 @@ body{
     border-radius: 10px;
     margin: 15px 30px;
 }
+
 /* blog section styles */
+
 .blogs{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -108,10 +118,24 @@ body{
     margin-left: 50px;
 }
 
+#view-all-btn{
+    background-color: #DD0000;
+    padding: 12px 29px;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    color: white;
+    width: 131px;
+    height: 47px;
+    position: relative;
+    left: 60%;
+    display: none;
+
+}
 
 /* footer styles */
+
 footer{
-    /* display: flex; */
     text-align: center;
     width: 100%;
     background-color: #161616;
@@ -136,4 +160,73 @@ footer hr{
     text-decoration: none;
     color: #B9B9B9;
     font-size: 16px;
+}
+.footer-icon{
+    font-size: 24px;
+    margin-top: 15px;
+}
+.fa-brands{
+    color: white;
+    margin: 10px;
+}
+
+/*-------------------------
+       Media query 
+  --------------------------*/
+
+/* for mobile devices */
+
+@media only screen and (max-width: 688px) {
+    .banner-container{
+        flex-direction: column;
+        margin: 25px 30px 35px;
+    }
+    .banner-info{
+        padding: 40px 15px 15px 0px;
+    }
+    .banner-info p{
+        text-decoration: ellipse;
+    }
+    .container{
+        flex-direction: column;
+        margin: 35px 40px
+    }
+    .btn-section{
+        background-color: white;
+        margin-right: 0;
+    }
+    .blogs{
+        grid-template-columns: repeat(1, 1fr);
+        margin: 25px 30px 35px;
+    }
+    .footer-link{
+        flex-direction: column;
+    }
+}
+
+/* responsive for tablet */
+
+@media only screen and (min-width: 689px) and ( max-width: 992px) {
+    .banner-container{
+        margin: 50px 50px 10px;
+    }
+    .container{
+        flex-direction: column;
+    }
+    .btn-section{
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        background-color: #FFFFFF;
+        width: 100%;
+    }
+    .blogs{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    #view-all-btn{
+        display: block;
+    }
+    .footer-link{
+    flex-wrap: wrap;
+}
 }
