--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,9 @@
 /* Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@500&display=swap');
 
-/* Common styles or utilities */
+/* -------------------------------
+       Common styles or utilities
+------------------------------------ */
 body{
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
@@ -9,7 +11,9 @@ body{
     margin: 0;
 }
 
-/* banner styles */
+/* -------------------------
+       banner styles
+----------------------------- */
 
 .banner-container{
     display: flex;
@@ -17,6 +21,7 @@ body{
     background: #161616;
     margin: 50px 110px 80px;
     border-radius: 30px;
+    overflow: hidden;
 }
 .banner-info{
     padding: 80px 20px 80px 100px;
@@ -49,13 +54,18 @@ body{
     transition: transform 1s ease-in;
 }
 
-/* button section styles */
+/* ---------------------------
+       main section styles 
+-------------------------------*/
 
 .container{
     display: flex;
     justify-content: center;
     margin: 50px 120px;
 }
+
+/* button section styles */
+
 .btn-section{
     display: flex;
     flex-direction: column;
@@ -78,9 +88,11 @@ body{
     margin: 15px 30px;
 }
 
-/* blog section styles */
+/*----------------- --------
+   blog section styles
+-----------------------------*/
 
-.blogs{
+.blogs, .matches{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 24px;
@@ -133,7 +145,42 @@ body{
 
 }
 
-/* footer styles */
+/*--------------------------------
+   Upcoming match section styles
+ --------------------------------- */
+ 
+ .match{
+    width: 240px;
+    height: 235px;
+    box-shadow: 0px 0px 1px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+ }
+ .match-thumbnail{
+    display: flex;
+    align-items: center;
+    margin: 5px;
+
+ }
+ .match-thumbnail img{
+    width: 100%;
+    padding: 5px;
+ }
+ .match-info h1{
+    font-size: 20px;
+ }
+ .match-info p{
+    font-size: 16px;
+    color: #4D4D4D;
+ }
+
+
+/*---------------------
+       footer styles
+----------------------- */
 
 footer{
     text-align: center;
@@ -195,7 +242,7 @@ footer hr{
         background-color: white;
         margin-right: 0;
     }
-    .blogs{
+    .blogs, .matches{
         grid-template-columns: repeat(1, 1fr);
         margin: 25px 30px 35px;
     }
@@ -204,7 +251,9 @@ footer hr{
     }
 }
 
-/* responsive for tablet */
+/* -------------------------
+    responsive for tablet
+------------------------------ */
 
 @media only screen and (min-width: 689px) and ( max-width: 992px) {
     .banner-container{
@@ -220,7 +269,7 @@ footer hr{
         background-color: #FFFFFF;
         width: 100%;
     }
-    .blogs{
+    .blogs, .matches{
         grid-template-columns: repeat(2, 1fr);
     }
     #view-all-btn{
